file/ingress_dir/ingress-nginx/http-ingess1.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tom
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: auth.ewang.com
      http:
        paths:
          - backend:
              serviceName: tom
              servicePort: 80
            path: /
---
