file/ingress_dir/ingress-nginx/ingress-new.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: canary-tom
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "version"
    nginx.ingress.kubernetes.io/canary-by-header-value: "1.7"
spec:
  tls:
    - hosts:
        - qa.yiben.ewang.com
      secretName: qaewang
  rules:
    - host: qa.yiben.ewang.com
      http:
        paths:
        - path: /
          backend:
            serviceName: canary-tom
            servicePort: 80
---
